# rag-mvp

./: .env.example  .gitignore  README.md  pyproject.toml
docs/logic_test/: protocol_purple_jellybean.txt
src/: chunker.py  config.py  main.py  rag.py  store.py
tests/: conftest.py  test_embedding.py  test_integration.py  test_logic.py  test_unit.py
