[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-mvp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "chromadb>=0.6.0",
    "pypdf>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
rag = "src.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: calls the Claude API (requires ANTHROPIC_API_KEY)",
    "embedding: loads the all-MiniLM-L6-v2 model (~700 MB RAM, slow on first run)",
]
